// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Models /> renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    <img
      alt="Loading"
      class="loading"
      data-testid="loading"
      src="Loading.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`<Models /> shows data if fetch success 1`] = `
<DocumentFragment>
  <div
    class="wrapper"
  >
    <div
      class="title"
    >
      Models
    </div>
    <div
      class="scrollWrapper"
    >
      <div
        class="model"
      >
        Explorer
      </div>
      <div
        class="model"
      >
        Fiesta
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Models /> shows empty wrapper if make value is falsy 1`] = `
<DocumentFragment>
  <div
    class="error"
    data-testid="empty-wrapper"
  />
</DocumentFragment>
`;

exports[`<Models /> shows laoding icon if fetch reject 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    <img
      alt="Loading"
      class="loading"
      data-testid="loading"
      src="Loading.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`<Models /> shows loading icon in loading stage 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    <img
      alt="Loading"
      class="loading"
      data-testid="loading"
      src="Loading.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`<Models /> shows message if fetch success with empty array 1`] = `
<DocumentFragment>
  <div
    class="error"
    data-testid="no-data"
  >
    No data found
  </div>
</DocumentFragment>
`;
